--- a/VRChat/97/1268597.html
+++ b/VRChat/97/1268597.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "OQC4rsWHzOv4Ox4CuYWH+mhE2k6CKmRFU/4nua17w7M="></script>
+    "OrN7uqSuy/nVr/4hhy7XDuUryuhtmrdP4e1xHUFnPoI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRCアバターアクセサリ―】12星座イヤリングなど","description":"VRC想定アバターアクセサリ３Dモデルです\n自分の星座に合わせてテクスチャファイルを変えてアバターにつけてください\n\n*3.13のアップデートでバッジが変わりました。ご了承ください。\n\n*注意）１２星座に合わせて作られております。13星座には対応してません！\n\n\nファイル\n*FBXファイル３つ\n→\n①イヤリング（1162Poly）\n②バッジ（762Poly）\n③Chainなしモデル（562Poly）\nテクスチャファイル(Albedo、Emission、改変PSD)\n\n\n入れ方）自分の星座に合わせてTexureフォルダのEarring_TexureフォルダにあるテクスチャをConstellationのマテリアルのMain Textureに貼ります。\nそのあとEmissionフォルダの同じ星座のテクスチャファイルをEmissionに入れることで終わりです。\nイヤリングとして使う場合、AmatureのHeadに入れて位置を調整してください。\n\n\n\n\n*本モデルはArktoon-Shader1.0.1.1を使用しております。\nhttps://booth.pm/ja/items/1027997\n*本モデルはクリスタルシェーダーを使用しております。\n→https://booth.pm/ja/items/1148311\n\n*このモデルの再配布、制作自己主張はおやめください。\n*アクセサリーデータの改造自由\n\nなにか分からないことがございましたら\nTwitter ＠Luche_VRC　までご連絡ください。","url":"https://booth.pm/ja/items/1268597","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/c8c6e1b2-84b4-4743-9383-98bec6ad8fbf/i/1268597/c95d2927-44c9-470c-9fa6-a1bdf15ca1bc_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="OQC4rsWHzOv4Ox4CuYWH+mhE2k6CKmRFU/4nua17w7M="></script>
+    nonce="OrN7uqSuy/nVr/4hhy7XDuUryuhtmrdP4e1xHUFnPoI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -433,9 +433,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
