--- a/VRChat/53/1268453.html
+++ b/VRChat/53/1268453.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "kHgYOR6mFGI2dX1AY0A5UfdqsYi3EtEMcK7iBrYIC94="></script>
+    "kXFbO+UdYDWh6qxC8ygXfu/vnRkQFB8uXYTBgT1Pbvk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"三重の金色の塔","description":"1枚目の画像はレイアウト例です。\n\n2枚目の画像の三段の黄金の塔が本体になります。\nボーンなどは一切入っていないモデルになっております。揺らしたい～というお声にはさぎりの能力不足でお答えできません。申し訳ありません…。\n\n基本的に自由に使用していただいて構いませんが、他人を不快にさせる目的や、宗教要素を含む使用用途にはご利用なさらないようにお願い申し上げます。\n\n連絡先:@rino_3506","url":"https://booth.pm/ja/items/1268453","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/cc7a5528-cef2-45ce-ba77-7bb2b5cb5eb6/i/1268453/f5b58aa3-5142-4ba3-8d61-2771a864eb16_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="kHgYOR6mFGI2dX1AY0A5UfdqsYi3EtEMcK7iBrYIC94="></script>
+    nonce="kXFbO+UdYDWh6qxC8ygXfu/vnRkQFB8uXYTBgT1Pbvk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -388,9 +388,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
