--- a/VRChat/07/1268407.html
+++ b/VRChat/07/1268407.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "1yHo3TFsOFY0TUc/jSrjkb8Ag+i4tRUtKXEFlhzIupQ="></script>
+    "ari6dlk1d5D8gasQYkd0B816ZecjLlQ7QOz/NKbqi+g="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"終わりの手術室","description":"オリジナル3Dモデル 『終わりの手術室』\n制作者 末期\n\n・商品概要\n\nVケット2にて提出するブース用に作ったものに、少々変更を加えたものになります。\n謎の機械や手術用のベッド、血液パック、ディスプレイ、ライト、周囲の壁などが用意されております（ノコギリ、ハサミ、注射器は付属しておりません）。\n\nお医者さんごっこで使用するもよし、怪しげな人体実験の場として利用するもよし、アバター用のアクセサリとして使用するもよし、ご自由に想像力を発揮してみてくださいませ。\n\n機能1：「Blood Pack.004」のチューブは、「Armature」のボーンで変形させることができます。\n\n機能2：「Machine」の「つまみ用」及び「ケーブル用」のボーンでつまみとケーブルを、「BlendShapes」の数値を変更することで、つまみを上下に動かすことができます。\n※つまみのボーンを動かす際は、Local座標にして動かすことを推奨いたします（Bone 2は動かさないでください）。\n\n機能3：ベッドの脚部を「BlendShapes」の数値を変更することで、伸縮させることができます。","url":"https://booth.pm/ja/items/1268407","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/4d555ecf-162f-432b-aeff-9bd1995cb0c8/i/1268407/7c8c8f6f-4c9a-4c2b-90c7-ebebcf8eadf5_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="1yHo3TFsOFY0TUc/jSrjkb8Ag+i4tRUtKXEFlhzIupQ="></script>
+    nonce="ari6dlk1d5D8gasQYkd0B816ZecjLlQ7QOz/NKbqi+g="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -445,9 +445,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
