--- a/VRChat/61/1267061.html
+++ b/VRChat/61/1267061.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "tQ3HTpdnIz9JKJ4sIFNeqgvg5kfMo+ipeSmhSc14Av4="></script>
+    "OXKPfiwy7WW+adkZ/uh+TRBabj0k+p8qWflvnUHCFSk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"フォーマルドレス3種類セット【VRoid用衣装】","description":"VRoidβ版とVRoid正式版どちらでも着れます。\nこのデータはVRoid Studio用（セシル変身アプリでも利用可能）\n落ち着きのあるシルク生地をイメージした色合いのおしゃれなVRoid用フォーマルドレステクスチャ3種類セットです。","url":"https://booth.pm/ja/items/1267061","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/8646e4ca-61b7-453d-88a5-dc39305d61ba/i/1267061/19682266-14af-4c04-aa7e-8d857d567332_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="tQ3HTpdnIz9JKJ4sIFNeqgvg5kfMo+ipeSmhSc14Av4="></script>
+    nonce="OXKPfiwy7WW+adkZ/uh+TRBabj0k+p8qWflvnUHCFSk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -533,9 +533,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
