--- a/VRChat/38/1267938.html
+++ b/VRChat/38/1267938.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Yb6r6xi36OV9nIWaCpJ1F3ZiDHTDh0qPJ/6PRzXkEUw="></script>
+    "ZbtbuvEw+avBiQaB6xFA5KhBIdV2m9RQmNYR50ejqlI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル　『そうちゃん』 Ver. 4.0.0","description":"VRChatでの利用を想定したオリジナル3Dモデル「たれみみわんこのそうちゃん」です！\nそうちゃんは、たれみみわんこの優しい女の子です。たくさんかわいがって頂けるとうれしいです！\n\n★追記2021/10/22：\nバージョン4.0アップデート公開しました！\nVRChatSDK3(Avatars3.0対応)などが含まれますので是非ダウンロードしてご利用ください。","url":"https://booth.pm/ja/items/1267938","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2111"},"image":"https://booth.pximg.net/c/620x620/465602c8-5ac9-4be4-963f-6e2cd3d662ca/i/1267938/87fef25a-bdcc-497a-a601-3c60111b9edf_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Yb6r6xi36OV9nIWaCpJ1F3ZiDHTDh0qPJ/6PRzXkEUw="></script>
+    nonce="ZbtbuvEw+avBiQaB6xFA5KhBIdV2m9RQmNYR50ejqlI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -689,9 +689,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
