--- a/VRChat/06/1267706.html
+++ b/VRChat/06/1267706.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "d2HZD8yjVgC+OUGSF3geL6gLCVigw/MquADg086oAmc="></script>
+    "V921mcC3Wv0M/q84wn2jsQEOL3Z9gDMxN02txfxHZpk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"旅するかに","description":"3Dモデル「旅するかに」\n\n\n◆本モデルはBOOTHにて無料配布中の「かに」モデルの改変例となっております。\n目の間と背中に椅子を仕込んでおり、お友達と一緒にちょっと変わった旅行気分を味わえます。\n改変モデル制作の際は通常版のかにをご利用ください。\n\n\n◆制作者\nやふ\n\n\n◆内容物\nTABIKANI.unitypackage\nテクスチャ(PNGファイル)\nテクスチャ改変用PSDファイル\nREADME\n\n\n◆導入方法\n１：Unity(2017.4.15.f1)を立ち上げます。\n\n２：「VRCSDK」と「UTS2_ShaderOnly_v2.0.5」をインポートしてください。\n　ダウンロード先\n　・VRCSDK\n　　https://www.vrchat.net/\n　　ログイン後、DownloadタブのCONTENT CREATIONから最新版がDownloadできます。\n\n　・UTS2_ShaderOnly_v2.0.5\n　　http://unity-chan.com/download/releaseNote.php?id=UTS2_0\n　　（最新版はv2.0.6ですが現在本モデルはv2.0.5で設定されております。v2.0.6での動作は現在のところ保証外です。すみません…）\n\n３：「TABIKANI.unitypackage」をインポート\n\n４：asset内のprefabデータをHierarchyにドロップ\n\n５；上部メニューバーの「VRChat SDK」の「Show Build Control Panel」から「Build ＆　Publish」を選択\n　　以降画面の指示に従い、情報を記入しアバターをアップロードしてください。\n　　※Sharingの項目は必ずPrivateにしてください。Publicでのアップロードは利用規約違反となります。\n\n\n◆利用規約\n本モデルをダウンロードした時点で利用規約に同意したものとします。\n\n◇改変・商用利用可能\n\n◇R-18、R-18Gコンテンツへの利用は禁止します。\n\n◇改変モデルの個人利用を目的とした無料配布は可能としますが、無改変モデルの再配布及び無改変・改変モデル単体の有料販売は禁止します。\n\n◇政治、宗教、他者に対する誹謗中傷目的での本モデル及び改変モデルの使用は禁止します。\n\n◇無改変モデルの自作発言は禁止します。\n\n◇本モデル及び改変モデルを利用したことによって発生したトラブルや損失に対して\n　制作者やふは一切責任を負いません。\n\n\n制定日\n2019/3/10","url":"https://booth.pm/ja/items/1267706","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/b9f12138-14d4-4edd-b61c-c86c8c2cf6fb/i/1267706/448a070b-5440-4b60-8dc2-99f22243158f_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="d2HZD8yjVgC+OUGSF3geL6gLCVigw/MquADg086oAmc="></script>
+    nonce="V921mcC3Wv0M/q84wn2jsQEOL3Z9gDMxN02txfxHZpk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -390,9 +390,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
