--- a/VRChat/70/1266870.html
+++ b/VRChat/70/1266870.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "nOXZj08Q9Mt5VzQnmuZ8if4KgO7UCn8aOPqtCudOeNo="></script>
+    "/ViWNHLE4PF9H0FF109L9l4+WmkseOpsjb4KWy0Qfr4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"PBT-Shader","description":"Unity用トゥーンシェーダです。\nセルルックを維持しつつ、リアリスティックな質感を両立できます。\nSubstance Painterなどで作成したUnity用PBRテクスチャをそのまま使えるため、UnityのStandardシェーダからそのまま移行できます。","url":"https://booth.pm/ja/items/1266870","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/9e316222-2e53-4586-9471-58ac96f0baec/i/1266870/ebe6dd10-00b1-48d2-be32-9e33fd9f174e_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="nOXZj08Q9Mt5VzQnmuZ8if4KgO7UCn8aOPqtCudOeNo="></script>
+    nonce="/ViWNHLE4PF9H0FF109L9l4+WmkseOpsjb4KWy0Qfr4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -427,9 +427,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
